# enlightened-AI

./: .gitignore  CLAUDE.md  README.md  ethos.yaml  pyproject.toml
ethos/: checks.py  cli.py  config.py  sig.py
examples/: ethos.yaml  sample_transcript.jsonl  tool_payload.json
examples/demo_run_output/: sig.graph.json  sig.sig  sig.summary.json
tests/: test_checks.py  test_sig.py
